<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/light_gray"
              tools:context=".MainActivity"
              tools:ignore="MergeRootFrame">

    <View
        android:id="@+id/header"
        android:background="@color/brand"
        android:layout_width="match_parent"
        android:layout_height="125dp"/>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_spacer"
        android:gravity="center|top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_left"
            style="@style/DateArrow"
            android:src="@drawable/arrow_left_grey" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Monday, March 2, 2015"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/half_spacer"
            android:layout_marginRight="@dimen/half_spacer" />

        <ImageView
            android:id="@+id/arrow_right"
            style="@style/DateArrow"
            android:src="@drawable/arrow_right_grey" />

        </LinearLayout>

    <ImageButton
        android:id="@+id/sync"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/half_spacer"
        android:src="@drawable/ic_sync_white_24dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/half_spacer"
        android:src="@drawable/settings_white"
        android:background="@null"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
