...
            android:background="@color/light_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/editor"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="top|left"
        android:padding="@dimen/full_spacer"
...
